# aloisius

./: .dockerignore  .editorconfig  Dockerfile  README.md
backend/: .gitignore  pyproject.toml
backend/src/aloisius/: __init__.py  app.py  cli.py  db.py  model.py  router.py  statics
frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
